--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,10 +1,10 @@
 default: &default
   adapter: postgresql
+  host: localhost
   pool: 5
-  timeout: 5000
   username: postgres
-  password: 520677
+  password: postgres
 
-development:
+production:
   <<: *default
   database: anye
