--- a/config/settings.rb.example
+++ b/config/settings.rb.example
@@ -13,3 +13,4 @@ settings.youku_client_id = '******'
 settings.youku_client_secret ='******'
 settings.img_type ='.png.jpeg.jpg.gif'
 settings.vcd_type ='.mp4.mp3'
+settings.videojj = '*******'
