用户权限管理及毛片数据管理

--- a/config/settings.rb.example
+++ b/config/settings.rb.example
@@ -14,3 +14,4 @@ settings.youku_client_secret ='******'
 settings.img_type ='.png.jpeg.jpg.gif'
 settings.vcd_type ='.mp4.mp3'
 settings.videojj = '*******'
+seetings.role_string = 'admin,fucker,looker'
